--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,8 +23,3 @@
     "vite": "^5.0.0"
   }
 }
-
-
-
-
-
