Updated json files so that consolidation and column name mapping is accepted

--- a/src/datasets/employee-project-assignments.json
+++ b/src/datasets/employee-project-assignments.json
@@ -248,7 +248,7 @@
             {
               "name": "PROJECT",
               "type": "PK",
-              "mappingType": "consolidate",
+              "mappingType": "direct",
               "sourceCols": [
                 "EMP_PROJ_ASSIGN.PROJECT"
               ]
@@ -256,7 +256,7 @@
             {
               "name": "PROJECT_BUDGET",
               "type": "attribute",
-              "mappingType": "consolidate",
+              "mappingType": "direct",
               "sourceCols": [
                 "EMP_PROJ_ASSIGN.PROJECT_BUDGET"
               ]
@@ -398,7 +398,7 @@
             {
               "name": "PROJECT",
               "type": "PK",
-              "mappingType": "consolidate",
+              "mappingType": "direct",
               "sourceCols": [
                 "ASSIGNMENT.PROJECT"
               ]
@@ -406,7 +406,7 @@
             {
               "name": "PROJECT_BUDGET",
               "type": "attribute",
-              "mappingType": "consolidate",
+              "mappingType": "direct",
               "sourceCols": [
                 "ASSIGNMENT.PROJECT_BUDGET"
               ]
